# ckconv

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: GenerateRelease.yml
ckconv/: CMakeLists.txt  PrintableMeasurementUnits.hpp  _global  _main  ckconv.cpp  conv.hpp  global.h  util.h
